--- a/StylinHats/pom.xml
+++ b/StylinHats/pom.xml
@@ -11,6 +11,10 @@
             <id>spigot-snapshots</id>
             <url>http://repo.md-5.net/content/repositories/snapshots/</url>
         </repository>
+        <repository>
+            <id>vault-repo</id>
+            <url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
+        </repository>
     </repositories>
     
     <dependencies>
@@ -23,6 +27,12 @@
             <groupId>com.samoatesgames</groupId>
             <artifactId>SamOatesPluginCore</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>net.milkbowl.vault</groupId>
+            <artifactId>Vault</artifactId>
+            <version>1.5.2</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
     
